--- a/src/pages/connect.html
+++ b/src/pages/connect.html
@@ -1,6 +1,6 @@
 <!doctype html>
-<title>Redirecting to: https://www.linaro.org/connect</title>
-<meta http-equiv="refresh" content="0;url=https://www.linaro.org/connect">
+<title></title>
+<meta http-equiv="refresh" content="0;url=https://old.linaro.org/connect">
 <meta name="robots" content="noindex">
-<link rel="canonical" href="https://www.linaro.org/connect">
+<link rel="canonical" href="https://old.linaro.org/connect">
 <body></body>
